# vdr-math

./: README.md  cookbook.md  migration_and_domain_extension.md  mkdocs.yaml  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt  test.py
docs/: index.md  understanding_vdr.md
docs/api/: README.md  active.md  basis.md  core.md  diffusion.forward.md  diffusion.md  diffusion.reverse.md  diffusion.sampling.md  diffusion.schedule.md  export.md  fn.md  linalg.md  math.chaos.md  math.coding_theory.md  math.combinatorics.md  math.continued_fractions.md  math.control.md  math.cryptographic.md  math.differential_eq.md  math.game_theory.md  math.geometry.md  math.graph.md  math.md  math.number_theory.md  math.optimization.md  math.polynomial.md  math.probability.md  math.sequences.md  math.symbolic.md  math.topology.md  math.transcendental.md  math.tropical.md  math.wavelets.md  ml.attention.md  ml.autodiff.md  ml.checkpoint.md  ml.datasets.md  ml.exp.md  ml.init.md  ml.logarithm.md  (+25 more)
examples/: hilbert_inverse.py  newton_sqrt2.py  q335_constants.py  quickstart.py
examples/toy_llm/: README.md  attention_backward.py  config.py  data.py  frames.py  generate.py  inspect.py  inspect_model.py  model.py  run.py  train.py  verify.py
scripts/: build.sh  docs-build.sh  docs-clean.sh  docs-init.sh  docs-lazydocs.sh  docs-serve.sh  install-dev.sh  lint.sh  publish-test.sh  publish.sh  test-cov.sh  test-fast.sh  test-gym.sh  test.sh  update_pypi.sh
src/vdr/: __init__.py  core.py  export.py  linalg.py
tests/: test_active.py  test_basis.py  test_core.py  test_d_stable.py  test_export.py  test_fn.py  test_linalg.py  test_normalize.py
tests/gym/: test_gym_01.py  test_gym_02.py  test_gym_03.py  test_gym_04.py  test_gym_05.py  test_gym_06.py  (+17 more)
vdr/: _compat.py  active.py  basis.py  core.py  fn.py
(+116 files in other folders)
